Spec 25400: fix resizing of web part after details expanded or collapsed (and make expansion sticky after filter change)

--- a/resources/web/study/Finder/dataFinder.css
+++ b/resources/web/study/Finder/dataFinder.css
@@ -32,6 +32,11 @@ DIV.labkey-data-finder-outer {
     min-width:400px;
 }
 
+.labkey-data-finder-view
+{
+    height: 500px;
+}
+
 DIV.labkey-study-cards {
     background-color: #ffffff
 }
